--- a/README.adoc
+++ b/README.adoc
@@ -2,9 +2,15 @@
 This is a demo project for the Spring I/O talk:
 https://2025.springio.net/sessions/effortless-spring-interface-clients-with-auto-configuration-and-clients-registry/[Effortless Spring Interface Clients with Auto-Configuration and Clients Registry].
 
-== Building the Spring Security Branch
+== About this Branch
 
-Check out the branch and publish to your local Maven repository:
+This branch adds a `UserController` that allows you to https://docs.github.com/en/rest/users/users?apiVersion=2022-11-28#get-the-authenticated-user[Get the authenticated user] through the GitHub APIs
+
+== Build Spring Security Preview Support
+
+To run the sample, you need to build a branch of Spring Security 7.0.0 that adds HTTP Service client support.
+
+Check out the below branch and publish it to your local Maven repository:
 
 [source,build]
 ----
@@ -14,13 +20,9 @@ git checkout -b interface-client origin/interface-clients
 ./gradlew publishToMavenLocal
 ----
 
-== Configuration
+== Register a new OAuth App
 
-This project will allow you to https://docs.github.com/en/rest/users/users?apiVersion=2022-11-28#get-the-authenticated-user[Get the authenticated user] using the GitHub APIs
-
-=== Register a new OAuth App
-
-To start, you need to Register a new OAuth App.
+Please, register a new OAuth App as follows:
 
 1) Navigate to https://github.com/settings/applications/new[Register a new OAuth app].
 
@@ -30,12 +32,21 @@ To start, you need to Register a new OAuth App.
 * *Homepage url* http://localhost:8080/
 * *Authorization callback URL* http://localhost:8080/login/oauth2/code/github
 
-3) Next click the *Generate a new client secret button*.
+3) Create the application
 
-=== Set the Client id and Secret
+4) Click the *Generate a new client secret button*.
 
-1) Copy `src/main/resources/RENAME-application-secrets.properties` to the git ignored file (ensures you do not push secrets) `src/main/resources/application-secrets.properties`
+== Set the Client id and Secret
+
+1) Rename or copy `src/main/resources/RENAME-application-secrets.properties` to  `src/main/resources/application-secrets.properties`
+This file is listed `.gitignore` to ensure that it is ignored by Git.
 
 2) Copy the newly generated *Client secret* and paste it into the `src/main/resources/application-secrets.properties` file as the corresponding property's value.
 
 3) Copy the *Client id* and paste it into the `src/main/resources/application-secrets.properties` file as the corresponding property's value.
+
+== Run the application
+
+1) Start the application by running `DemoApplication`
+
+2) Open a browser and go to http://localhost:8080/user
