--- a/README.adoc
+++ b/README.adoc
@@ -2,9 +2,16 @@
 This is a demo project for the Spring I/O talk:
 https://2025.springio.net/sessions/effortless-spring-interface-clients-with-auto-configuration-and-clients-registry/[Effortless Spring Interface Clients with Auto-Configuration and Clients Registry].
 
-== Building the Spring Security Branch
+== About this Branch
 
-Check out the branch and publish to your local Maven repository:
+This project will sign on using GitHub and then allow you to create an issue on your fork of the repository configured in the application.properties (by default this is spring-framework).
+
+
+== Build Spring Security Preview Support
+
+To run the sample, you need to build a branch of Spring Security 7.0.0 that adds HTTP Service client support.
+
+Check out the below branch and publish it to your local Maven repository:
 
 [source,build]
 ----
@@ -14,24 +21,21 @@ git checkout -b interface-client origin/interface-clients
 ./gradlew publishToMavenLocal
 ----
 
-== Configuration
+=== Fork spring-framework
 
-This project will sign on using GitHub and then allow you to create an issue on your fork of the repository configured in the application.properties (by default this is spring-framework).
-
-=== Fork pf spring-framework
-
-First you need to ensure that you have a fork of that project with your username as the owner.
-This ensures that the issues are created on your fork instead of creating "noise" on the actual project.
-You can https://github.com/spring-projects/spring-framework/fork[click here] to create a fork if you don't already have one.
+You will need to have a fork of the spring-framework project under your username.
+This ensures that the issues are created on your fork instead of on the actual project.
+If you don't have a fork already, https://github.com/spring-projects/spring-framework/fork[click here] to create it.
 
 === Enable issues for your fork
+
 Next, you need to ensure that the settings for your fork have issues enabled so that you can create an issue.
 For example, if your username is rwinch, you would visit the URL https://github.com/rwinch/spring-framework/settings
 Scroll down till you see **Features** and ensure that **Issues** is selected.
 
-=== Register a new OAuth App
+== Register a new OAuth App
 
-Finally, you need to Register a new OAuth App.
+Next, register a new OAuth App as follows:
 
 1) Navigate to https://github.com/settings/applications/new[Register a new OAuth app].
 
@@ -41,12 +45,21 @@ Finally, you need to Register a new OAuth App.
 * *Homepage url* http://localhost:8080/
 * *Authorization callback URL* http://localhost:8080/login/oauth2/code/github
 
-3) Next click the *Generate a new client secret button*.
+3) Create the application
 
-=== Set the Client id and Secret
+4) Click the *Generate a new client secret button*.
 
-1) Copy `src/main/resources/RENAME-application-secrets.properties` to the git ignored file (ensures you do not push secrets) `src/main/resources/application-secrets.properties`
+== Set the Client id and Secret
+
+1) Rename or copy `src/main/resources/RENAME-application-secrets.properties` to  `src/main/resources/application-secrets.properties`
+This file is listed `.gitignore` to ensure that it is ignored by Git.
 
 2) Copy the newly generated *Client secret* and paste it into the `src/main/resources/application-secrets.properties` file as the corresponding property's value.
 
 3) Copy the *Client id* and paste it into the `src/main/resources/application-secrets.properties` file as the corresponding property's value.
+
+== Run the application
+
+1) Start the application by running `DemoApplication`
+
+2) Open a browser and go to http://localhost:8080/user
